Better testing, handling absolute paths

--- a/src/test/resources/a/b/c/d.properties
+++ b/src/test/resources/a/b/c/d.properties
@@ -8,10 +8,13 @@ cuicui =  a \
 # empty comment
 #
 
-# trailing comment
+# trailing hash
 coincoin =  2  #
 
 # quotes
 loulou = "ceci est une chaîne avec espaces"
 
 lolo :  cas des deux points
+
+! comment
+  ! comment2
